tweaked css to stop x-axis jumping, needs more

--- a/src/globals.css
+++ b/src/globals.css
@@ -467,4 +467,7 @@ nav.hero-nav a:hover {
   html {
     overflow-y: scroll; /* always reserve scrollbar space */
   }
+  html {
+    overflow-x: hidden;
+  }
 }
